--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">Στῖφος καί οἱ κάμελοι</h1>
-      <h2 class="project-tagline">This is just a thing.</h2>
+      <h2 class="project-tagline">A tale of friendship, betrayal, camels, and circumflexes</h2>
       <a href="https://github.com/CheeseTurtle/grk" class="btn">View site repo on GitHub</a>
       <a href="https://github.com/CheeseTurtle/grk/zipball/master" class="btn">Download source .zip</a>
       <a href="https://github.com/CheeseTurtle/grk/tarball/master" class="btn">Download source .tar.gz</a>
