--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Στῖφος καί οἱ κάμελοι</h1>
+      <h1 class="project-name">Στῖφος καὶ οἱ κάμηλοι</h1>
       <h2 class="project-tagline">A tale of friendship, betrayal, camels, and circumflexes</h2>
       <a href="https://github.com/CheeseTurtle/grk" class="btn">View site repo on GitHub</a>
     </section>
@@ -22,7 +22,7 @@
         I. ἡ νῆσος
       </h3>
         
-      <p>ὁ Στῖφος, ὅτε οἱ κάμελοι ἐβασίλευον τῆς Ἑλλάδος, οὐκ ἦρξε τῆς πατρίδος.</p>
+      <p>ὁ Στῖφος, ὅτε οἱ κάμηλοι ἐβασίλευον τῆς Ἑλλάδος, οὐκ ἦρξε τῆς πατρίδος.</p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/CheeseTurtle/grk">This repository</a> is maintained by <a href="https://github.com/CheeseTurtle">CheeseTurtle</a>.</span>
